--- a/perfumes.html
+++ b/perfumes.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Perfumes - EREBUS</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>EREBUS - Perfumes</title>
 <style>
+@import url('https://fonts.googleapis.com/css2?family=Neblina&display=swap');
+
 :root{
   --color-primary:#000;
+  --color-secondary:#555;
   --color-background:#fff;
   --color-accent:#e0e0e0;
   --color-text:#333;
@@ -14,13 +17,24 @@
   --font-title:'Neblina', sans-serif;
 }
 *{box-sizing:border-box;margin:0;padding:0}
-body{font-family:var(--font-family);background:var(--color-background);color:var(--color-text);line-height:1.6;padding-top:120px}
+html, body{width:100%;margin:0;padding:0;overflow-x:hidden;}
+body{
+  font-family:var(--font-family);
+  background:var(--color-background);
+  color:var(--color-text);
+  line-height:1.6;
+  padding-top:120px;
+}
 
 /* HEADER */
-header{position:fixed;top:0;left:0;width:100%;background:var(--color-primary);color:var(--color-background);z-index:1000;transition:all .3s ease;}
+header{
+  position:fixed;top:0;left:0;width:100%;
+  background:var(--color-primary);color:var(--color-background);z-index:1000;
+  transition:all .3s ease;
+}
 .logo-container{display:flex;align-items:center;justify-content:center;height:70px;overflow:hidden;transition:all .3s}
 .logo-container img{height:50px;margin-right:10px}
-.logo-container h1{font-size:1.8rem;color:#fff;margin:0;}
+.logo-container h1{font-size:1.8rem;color:#fff;margin:0;font-family:var(--font-title);}
 .header-hidden .logo-container{height:0;transform:translateY(-100%)}
 
 /* NAV */
@@ -28,73 +42,50 @@ nav ul{list-style:none;display:flex;justify-content:center;gap:20px;padding:10px
 nav a{color:var(--color-background);text-decoration:none;font-weight:500;font-size:1rem;padding:5px 0;}
 nav a.active{color:#e0e0e0;border-bottom:2px solid var(--color-accent);}
 
-/* MAIN PERFUMES */
-main{padding:40px 20px;max-width:1400px;margin:0 auto;text-align:center}
-h1{margin-bottom:40px;margin-top:0; font-family: var(--font-title);}
+/* PERFUMES */
+section{padding:4rem 2rem;text-align:center}
+section h2{margin-bottom:2rem;font-size:2rem;color:var(--color-primary)}
+.products{display:grid;gap:20px;grid-template-columns:repeat(4,1fr)}
+@media (max-width:1024px){.products{grid-template-columns:repeat(2,1fr)}}
+@media (max-width:768px){.products{grid-template-columns:repeat(1,1fr)}}
+.product{border:1px solid var(--color-accent);border-radius:8px;padding:1rem;transition:transform .3s,box-shadow .3s;cursor:pointer}
+.product:hover{transform:translateY(-5px);box-shadow:0 4px 20px rgba(0,0,0,.1)}
+.product img{width:100%;aspect-ratio:1/1;object-fit:cover;border-radius:8px;margin-bottom:1rem}
+.product h3{margin-bottom:.5rem;color:var(--color-secondary); font-family: var(--font-title);}
+.product .price{font-weight:bold;color:var(--color-primary)}
 
-/* Grid responsivo */
-.perfumes{display:grid;gap:20px;justify-items:center;grid-template-columns:repeat(2,1fr);}
-@media(min-width:1025px){.perfumes{grid-template-columns:repeat(5,1fr)}}
-
-.perfume{
-  background:#fff;
-  border:1px solid var(--color-accent);
-  border-radius:12px;
-  padding:15px;
-  text-align:center;
-  transition:transform .3s,box-shadow .3s;
-  width:100%;
-  max-width:220px;
-  cursor:pointer;
-}
-.perfume:hover{transform:translateY(-5px);box-shadow:0 4px 20px rgba(0,0,0,.1)}
-.perfume img{width:100%;height:auto;border-radius:12px}
-.perfume h3{margin:10px 0 5px;font-size:1.1rem;font-family: var(--font-title);}
-.perfume p{margin:5px 0;font-size:0.9rem;color:#666}
-.perfume .price{font-weight:bold;margin-top:10px;font-size:1rem;color:#000}
+/* FOOTER */
+footer{background:var(--color-primary);color:var(--color-background);text-align:center;padding:2rem 1rem;margin-top:2rem}
 
 /* MODAL */
-.modal{display:none;position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.7);z-index:2000;justify-content:center;align-items:center;overflow:auto;padding:20px}
+.modal{display:none;position:fixed;z-index:2000;left:0;top:0;width:100%;height:100%;overflow:auto;background:rgba(0,0,0,0.7);justify-content:center;align-items:center;padding:20px}
 .modal-content{background:#fff;width:90%;max-width:900px;display:flex;border-radius:12px;overflow:hidden;flex-direction:row;position:relative;box-shadow:0 10px 30px rgba(0,0,0,.3);animation:fadeIn .3s ease;}
 @keyframes fadeIn{from{opacity:0;transform:scale(.95)}to{opacity:1;transform:scale(1)}}
-
 .modal-left, .modal-right{flex:1;position:relative}
-.modal-left img{width:100%;height:100%;object-fit:cover;display:block;border-radius:12px;}
+.modal-left img{width:100%;height:100%;object-fit:cover;display:block;}
 .modal-right{display:flex;flex-direction:column;justify-content:center;gap:15px;padding:30px;text-align:left}
-.modal-right h2{font-size:1.6rem;color:var(--color-primary);border-bottom:1px solid var(--color-accent);padding-bottom:10px;margin-bottom:10px;font-family: var(--font-title);}
+.modal-right h2{font-size:1.6rem;color:var(--color-primary);border-bottom:1px solid var(--color-accent);padding-bottom:10px;margin-bottom:10px; font-family: var(--font-title);}
 .modal-right p{margin-bottom:5px;font-size:1rem;color:#444;}
 .price{color:#000;font-weight:bold;font-size:1.2rem}
-
-/* Presentaciones ml */
-.ml-options{display:flex;gap:10px;margin:10px 0;}
-.ml-option{flex:1;text-align:center;padding:10px;border:1px solid var(--color-accent);border-radius:20px;cursor:pointer;transition:all .3s;font-size:0.9rem;background:#f9f9f9;color:#333;}
-.ml-option:hover{border-color:#000;}
-.ml-option.active{background:#000;color:#fff;border-color:#000;}
 
 /* Cantidad con botones */
 .quantity-control{display:flex;align-items:center;gap:10px;margin:10px 0;}
 .quantity-btn{background:#000;color:#fff;border:none;width:35px;height:35px;border-radius:50%;font-size:1.2rem;cursor:pointer;transition:all .3s}
 .quantity-btn:hover{background:#333;}
 #quantity{width:50px;text-align:center;border:1px solid var(--color-accent);border-radius:6px;padding:6px;font-size:1rem}
-
-/* Botón carrito */
 .add-cart{background:#000;color:#fff;padding:14px;border:none;cursor:pointer;width:100%;border-radius:8px;font-size:1rem;font-weight:600;transition:all .3s}
 .add-cart:hover{background:#333;transform:translateY(-2px)}
-
-/* Cerrar modal */
 .close{position:absolute;top:10px;right:15px;font-size:28px;font-weight:bold;color:#000;cursor:pointer;transition:all .3s}
 .close:hover{color:#555;}
-
-/* RESPONSIVE MODAL */
 @media(max-width:1024px){
   .modal-content{flex-direction:column;width:95%;}
   .modal-left img{height:280px;object-fit:cover;}
   .modal-right{padding:20px;}
 }
-footer{text-align:center;padding:20px;font-size:0.9rem;background:#f9f9f9;margin-top:40px;color:#666;}
 </style>
 </head>
 <body>
+
 <header id="mainHeader">
   <div class="logo-container">
     <img src="images/LOGOE.png" alt="Logo EREBUS">
@@ -105,120 +96,70 @@ footer{text-align:center;padding:20px;font-size:0.9rem;background:#f9f9f9;margin
       <li><a href="index.html">Inicio</a></li>
       <li><a href="index.html#ropa">Ropa</a></li>
       <li><a href="perfumes.html" class="active">Perfumes</a></li>
-      <li><a href="index.html#contacto">Contacto</a></li>
+      <li><a href="#contacto">Contacto</a></li>
     </ul>
   </nav>
 </header>
 
-<main>
-  <h1>Nuestros Perfumes</h1>
-  <div class="perfumes" id="perfumesContainer"></div>
-</main>
+<section id="perfumes">
+  <h2>Nuestros Perfumes</h2>
+  <div class="products" id="perfumesProducts"></div>
+</section>
+
+<section id="contacto">
+  <h2>Contacto</h2>
+  <p>Email: contacto@tutienda.com</p>
+  <p>Tel: +34 600 123 456</p>
+</section>
+
+<footer>
+  <p>&copy; 2024 Tu Tienda Elegante. Todos los derechos reservados.</p>
+</footer>
 
 <!-- MODAL -->
-<div class="modal" id="productModal">
+<div id="productModal" class="modal">
   <div class="modal-content">
-    <span class="close" id="closeModal">&times;</span>
+    <span class="close">&times;</span>
     <div class="modal-left">
       <img id="modalImage" src="" alt="Producto">
     </div>
     <div class="modal-right">
       <h2 id="modalTitle"></h2>
       <p id="modalDescription"></p>
-      <p id="modalPrice" class="price"></p>
-
-      <label>Presentación:</label>
-      <div class="ml-options">
-        <div class="ml-option active" data-ml="60ml" data-price="199">60 ml</div>
-        <div class="ml-option" data-ml="120ml" data-price="299">120 ml</div>
-      </div>
-
+      <p class="price" id="modalPrice">$220.00</p>
       <label>Cantidad:</label>
       <div class="quantity-control">
         <button class="quantity-btn" id="decrease">-</button>
         <input type="text" id="quantity" value="1" readonly>
         <button class="quantity-btn" id="increase">+</button>
       </div>
-
       <button class="add-cart">Agregar al carrito 🛒</button>
     </div>
   </div>
 </div>
 
-<footer>
-  <p>© 2024 Tu Tienda Elegante. Todos los derechos reservados.</p>
-</footer>
-
 <script>
-// Lista de perfumes
-const perfumes = [
-  {name:"Mar Negro",description:"Oscuro, marino, misterioso.",price60:"$199.00",price120:"$299.00",image:"images/ADGPROFUMO.png"},
-  {name:"Neblina",description:"Fresco, salado, acuático.",price60:"$199.00",price120:"$299.00",image:"images/INV.png"},
-  {name:"Neblina Plateada",description:"Fresco, audaz, moderno.",price60:"$199.00",price120:"$299.00",image:"images/INVPLAT.png"},
-  {name:"Edén Tropical",description:"Exótico, tropical, vibrante.",price60:"$199.00",price120:"$299.00",image:"images/JEANGARD.png"},
-  {name:"Fortuna Dorada",description:"Dulce, audaz, opulento.",price60:"$199.00",price120:"$299.00",image:"images/LUCKY.png"},
-  {name:"Abismo Azul",description:"Acuático, fresco, profundo.",price60:"$199.00",price120:"$299.00",image:"images/PROFONDO.png"},
-  {name:"Sombra de Sándalo",description:"Leñoso, ahumado, robusto.",price60:"$199.00",price120:"$299.00",image:"images/SANTAL.png"},
-  {name:"Neblina V Elixir",description:"Intenso, picante, potente.",price60:"$199.00",price120:"$299.00",image:"images/VELIXIR.png"},
-  {name:"Océano Ígneo",description:"Elegante, fresco, audaz.",price60:"$199.00",price120:"$299.00",image:"images/BLEU.png"},
-  {name:"Legado",description:"Fresco, leñoso, complejo.",price60:"$199.00",price120:"$299.00",image:"images/CREED.png"},
+// Productos perfumes
+const perfumesProducts = [
+   {id:1,name:"Perfume Ébano",description:"Notas profundas y elegantes.",price:"$350.00",image:"images/perfume1.png",keywords:"perfume ebano"},
+   {id:2,name:"Perfume Aurora",description:"Aromas frescos y delicados.",price:"$370.00",image:"images/perfume2.png",keywords:"perfume aurora"},
+   {id:3,name:"Perfume Nocturno",description:"Sensación misteriosa y sofisticada.",price:"$400.00",image:"images/perfume3.png",keywords:"perfume nocturno"},
+   {id:4,name:"Perfume Prisma",description:"Fragancia vibrante y moderna.",price:"$380.00",image:"images/perfume4.png",keywords:"perfume prisma"},
 ];
 
 // Renderizar perfumes
-const perfumesContainer = document.getElementById("perfumesContainer");
-perfumes.forEach((p)=> {
-  const div = document.createElement("div");
-  div.className="perfume";
-  div.innerHTML = `
-    <img src="${p.image}" alt="${p.name}">
-    <h3>${p.name}</h3>
-    <p>${p.description}</p>
-    <p class="price">${p.price120}</p>`;
-  div.addEventListener("click", ()=>openModal(p));
-  perfumesContainer.appendChild(div);
-});
-
-// Modal
-const modal = document.getElementById("productModal");
-const closeModal = document.getElementById("closeModal");
-const modalImage = document.getElementById("modalImage");
-const modalTitle = document.getElementById("modalTitle");
-const modalDescription = document.getElementById("modalDescription");
-const modalPrice = document.getElementById("modalPrice");
-
-function openModal(product){
-  modal.style.display="flex";
-  modalImage.src = product.image;
-  modalTitle.textContent = product.name;
-  modalDescription.textContent = product.description;
-  modalPrice.textContent = product.price60;
-  document.getElementById("quantity").value = 1; 
-  document.querySelectorAll(".ml-option").forEach(opt=>opt.classList.remove("active"));
-  const firstOption = document.querySelector(".ml-option[data-ml='60ml']");
-  firstOption.classList.add("active");
-}
-
-// Cerrar modal
-closeModal.addEventListener("click", ()=>modal.style.display="none");
-window.addEventListener("click", e=>{if(e.target===modal) modal.style.display="none";});
-
-// Cantidad
-const decreaseBtn = document.getElementById("decrease");
-const increaseBtn = document.getElementById("increase");
-const quantityInput = document.getElementById("quantity");
-
-decreaseBtn.addEventListener("click", ()=>{let val=parseInt(quantityInput.value);if(val>1)quantityInput.value=val-1;});
-increaseBtn.addEventListener("click", ()=>{let val=parseInt(quantityInput.value);quantityInput.value=val+1;});
-
-// Selección de ml
-document.querySelectorAll(".ml-option").forEach(opt=>{
-  opt.addEventListener("click", ()=>{
-    document.querySelectorAll(".ml-option").forEach(o=>o.classList.remove("active"));
-    opt.classList.add("active");
-    const currentProduct = perfumes.find(p=>p.name===modalTitle.textContent);
-    modalPrice.textContent = opt.dataset.ml==="60ml" ? currentProduct.price60 : currentProduct.price120;
+const cont = document.getElementById('perfumesProducts');
+function renderPerfumes(list){
+  cont.innerHTML = '';
+  (list||perfumesProducts).forEach(p=>{
+    const div = document.createElement('div');
+    div.className = 'product';
+    div.innerHTML = `<img src="${p.image}" alt="${p.name}"><h3>${p.name}</h3><p>${p.description}</p><p class="price">${p.price}</p>`;
+    div.addEventListener('click', ()=>openModal(p));
+    cont.appendChild(div);
   });
-});
+}
+renderPerfumes();
 
 // Header scroll
 const header = document.getElementById('mainHeader');
@@ -228,6 +169,32 @@ window.addEventListener('scroll', ()=>{
   if(y > lastY && y > 50) header.classList.add('header-hidden'); else header.classList.remove('header-hidden');
   lastY = y<=0?0:y;
 });
+
+// Modal
+const modal = document.getElementById("productModal");
+const modalImage = document.getElementById("modalImage");
+const modalTitle = document.getElementById("modalTitle");
+const modalDescription = document.getElementById("modalDescription");
+const modalPrice = document.getElementById("modalPrice");
+const closeBtn = modal.querySelector('.close');
+
+function openModal(product){
+  modal.style.display='flex';
+  modalImage.src=product.image;
+  modalTitle.textContent=product.name;
+  modalDescription.textContent=product.description;
+  modalPrice.textContent=product.price;
+  quantityInput.value=1;
+}
+
+closeBtn.addEventListener('click', ()=>modal.style.display='none');
+window.addEventListener('click', e=>{ if(e.target==modal) modal.style.display='none'; });
+
+// Cantidad
+const quantityInput = document.getElementById('quantity');
+document.getElementById('increase').addEventListener('click', ()=>{quantityInput.value=parseInt(quantityInput.value)+1});
+document.getElementById('decrease').addEventListener('click', ()=>{if(quantityInput.value>1)quantityInput.value=parseInt(quantityInput.value)-1});
 </script>
+
 </body>
 </html>
